📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -902,5 +902,61 @@
         "published": "Thu, 04 Dec 2025 13:11:33 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46147285\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-8",
+        "title": "NYT Pips hints, answers for December 8, 2025",
+        "link": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-8",
+        "published": "Mon, 08 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The New York Times' latest game, Pips, brings domino fun to your desktop. How to play Pips as well as hints in case you get stuck."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-8-2025",
+        "title": "NYT Connections Sports Edition today: Hints and answers for December 8, 2025",
+        "link": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-8-2025",
+        "published": "Mon, 08 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections: Sports Edition is a New York Times word game about finding common sports threads between words. How to solve the day's puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-8-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 8, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-8-2025",
+        "published": "Mon, 08 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-8-2025",
+        "title": "NYT Strands hints, answers for December 8, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-8-2025",
+        "published": "Mon, 08 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-8-2025",
+        "title": "Wordle today: Answer, hints for December 8, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-8-2025",
+        "published": "Mon, 08 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1632 on December 8 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://www.zdnet.com/article/your-airtag-isnt-truly-travel-ready-unless-it-has-this-accessory-heres-why-i-vouch-for-it/",
+        "title": "Your AirTag isn't truly travel-ready unless it has this accessory - here's why I vouch for it",
+        "link": "https://www.zdnet.com/article/your-airtag-isnt-truly-travel-ready-unless-it-has-this-accessory-heres-why-i-vouch-for-it/",
+        "published": "Mon, 08 Dec 2025 03:00:41 GMT",
+        "source": "Latest news",
+        "summary": "Elevation's Tag Vault keychain and security cable will protect your AirTag from being easily detached from various things."
+    },
+    {
+        "id": "https://www.experimental-history.com/p/bag-of-words-have-mercy-on-us",
+        "title": "Bag of words, have mercy on us",
+        "link": "https://www.experimental-history.com/p/bag-of-words-have-mercy-on-us",
+        "published": "Sun, 07 Dec 2025 22:31:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46185957\">Comments</a>"
     }
 ]
