📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -958,5 +958,13 @@
         "published": "Sun, 07 Dec 2025 22:31:22 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46185957\">Comments</a>"
+    },
+    {
+        "id": "https://turtletoy.net/",
+        "title": "Turtletoy",
+        "link": "https://turtletoy.net/",
+        "published": "Wed, 03 Dec 2025 18:57:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46138459\">Comments</a>"
     }
 ]
