📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -966,5 +966,37 @@
         "published": "Wed, 03 Dec 2025 18:57:08 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46138459\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/samsung-promo-codes/",
+        "title": "30% Off Samsung Promo Code | December 2025",
+        "link": "https://www.wired.com/story/samsung-promo-codes/",
+        "published": "Mon, 08 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save 30% or 10% with Samsung coupon codes, up to $1,800 on appliances, plus limited-time holiday deals on the Galaxy Z Fold7, Flip7, and S25."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-8",
+        "title": "Moon phase today: What the moon will look like on December 8",
+        "link": "https://mashable.com/article/moon-phase-today-dec-8",
+        "published": "Mon, 08 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 8, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://www.abc.net.au/news/2025-12-05/australian-working-from-home-mental-health-impacts-tracked/106096688",
+        "title": "Impacts of working from home on mental health tracked in study of Australians",
+        "link": "https://www.abc.net.au/news/2025-12-05/australian-working-from-home-mental-health-impacts-tracked/106096688",
+        "published": "Thu, 04 Dec 2025 22:11:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46153822\">Comments</a>"
+    },
+    {
+        "id": "https://www.damnsmalllinux.org/",
+        "title": "Damn Small Linux",
+        "link": "https://www.damnsmalllinux.org/",
+        "published": "Mon, 08 Dec 2025 01:47:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46187387\">Comments</a>"
     }
 ]
