📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1038,5 +1038,77 @@
         "published": "Mon, 08 Dec 2025 09:00:00 +0000",
         "source": "AI News",
         "summary": "<p>ByteDance&#8217;s December 2 launch of an agentic AI smartphone prototype with ZTE sparked immediate consumer enthusiasm \u2013 and just as quickly triggered privacy concerns that forced the company to dial back capabilities. But beneath the headline-grabbing sell-out and subsequent controversy lies a more significant story: the enterprise implications of operating-system-level AI agents that can autonomously [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/agent"
+    },
+    {
+        "id": "https://www.wired.com/story/the-longest-solar-eclipse-for-100-years-is-coming-dont-miss-it/",
+        "title": "The Longest Solar Eclipse for 100 Years Is Coming. Don\u2019t Miss It",
+        "link": "https://www.wired.com/story/the-longest-solar-eclipse-for-100-years-is-coming-dont-miss-it/",
+        "published": "Mon, 08 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "NASA has announced when the longest total solar eclipse of the century will occur\u2014and you won\u2019t have to wait long. Here\u2019s what you should know."
+    },
+    {
+        "id": "https://www.engadget.com/apps/the-best-budgeting-apps-to-replace-mint-143047346.html?src=rss",
+        "title": "The 5 best Mint alternatives to replace the budgeting app that shut down",
+        "link": "https://www.engadget.com/apps/the-best-budgeting-apps-to-replace-mint-143047346.html?src=rss",
+        "published": "Mon, 08 Dec 2025 10:01:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It's been over one year since Intuit<a href=\"https://www.engadget.com/intuit-is-closing-down-mint-its-popular-free-budget-tracking-app-054145229.html\"> shut down</a> the popular budgeting app Mint. I was a Mint user for many years; millions of other users like me enjoyed how easily Mint allowed us to track all accounts in one place and monitor credit scores. I also used it regularly to help me track spending, set goals like pay my mortgage down faster and with general money management.<br /><"
+    },
+    {
+        "id": "https://www.engadget.com/the-best-secret-santa-gift-ideas-for-2025-affordable-gifts-to-give-from-apple-lego-yeti-and-others-130014197.html?src=rss",
+        "title": "The best Secret Santa gift ideas for 2025: Affordable gifts to give from Apple, Lego, Yeti and others",
+        "link": "https://www.engadget.com/the-best-secret-santa-gift-ideas-for-2025-affordable-gifts-to-give-from-apple-lego-yeti-and-others-130014197.html?src=rss",
+        "published": "Mon, 08 Dec 2025 09:25:01 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Secret Santa gift exchanges are supposed to be fun, but it\u2019s easy to overthink it. You want a gift that feels thoughtful without being awkward, useful without being boring, and most importantly, affordable. The sweet spot is under $50, which is plenty to find something that fits your recipient\u2019s personality. Whether you\u2019re buying for a co-worker you only chat with at the coffee machine, a friend who already has everything or a cousin who never gives you ideas, there are clever options that wi"
+    },
+    {
+        "id": "https://gizmodo.com/netflix-trump-2000696562",
+        "title": "Netflix Reportedly Greased the Skids for Its Warner Acquisition by Yukking It Up with Trump",
+        "link": "https://gizmodo.com/netflix-trump-2000696562",
+        "published": "Mon, 08 Dec 2025 10:00:48 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Netflix co-CEO Ted Sarandos laughing\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/sarandos.jpg\" width=\"1500\" /><br /><br />How do you keep an antitrust-curious president from sinking your M&amp;E deal? This is reportedly how."
+    },
+    {
+        "id": "https://readwrite.com/new-york-bans-online-sweepstakes-casinos/",
+        "title": "New York outlaws online sweepstakes casinos with new enforcement and penalties",
+        "link": "https://readwrite.com/new-york-bans-online-sweepstakes-casinos/",
+        "published": "Mon, 08 Dec 2025 09:47:34 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Sweepstakes ban would cost New York $230M annually, says SGLA. New York outlaws online sweepstakes casinos with new enforcement and penalties. Split image showing the New York City skyline with the Empire State Building on the left, and on the right, a computer mouse beside poker chips and playing cards, symbolizing online gambling or sweepstakes gaming.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/10/Sweepsta"
+    },
+    {
+        "id": "https://www.zdnet.com/article/dreading-ai-job-cuts-5-ways-to-future-proof-your-career-before-its-too-late/",
+        "title": "Dreading AI job cuts? 5 ways to future-proof your career - before it's too late",
+        "link": "https://www.zdnet.com/article/dreading-ai-job-cuts-5-ways-to-future-proof-your-career-before-its-too-late/",
+        "published": "Mon, 08 Dec 2025 10:00:42 GMT",
+        "source": "Latest news",
+        "summary": "Evidence suggests emerging technology is impacting the job market, but there are ways to ensure you're prepared for the hit."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-personal-finance-services/",
+        "title": "The best personal finance apps in 2025: Expert tested",
+        "link": "https://www.zdnet.com/article/best-personal-finance-services/",
+        "published": "Mon, 08 Dec 2025 10:00:33 GMT",
+        "source": "Latest news",
+        "summary": "ZDNET tested the best personal finance apps to help you stick to a budget and plan your financial future."
+    },
+    {
+        "id": "https://www.nicchan.me/blog/the-f-off-contact-page/",
+        "title": "The f*** off contact page",
+        "link": "https://www.nicchan.me/blog/the-f-off-contact-page/",
+        "published": "Mon, 08 Dec 2025 08:57:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46189994\">Comments</a>"
+    },
+    {
+        "id": "https://shaddy.dev/notes/jj-worktrees/",
+        "title": "Jujutsu Worktrees Are Convenient",
+        "link": "https://shaddy.dev/notes/jj-worktrees/",
+        "published": "Wed, 03 Dec 2025 23:26:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46141731\">Comments</a>"
     }
 ]
