📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1214,5 +1214,149 @@
         "published": "Mon, 08 Dec 2025 10:13:07 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46190577\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/openai-boasts-enterprise-win-days-after-internal-code-red-on-google-threat/",
+        "title": "OpenAI boasts enterprise win days after internal \u2018code red\u2019 on Google threat",
+        "link": "https://techcrunch.com/2025/12/08/openai-boasts-enterprise-win-days-after-internal-code-red-on-google-threat/",
+        "published": "Mon, 08 Dec 2025 12:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "ChatGPT Enterprise usage grew 8x year-over-year as workers report saving an hour daily, but OpenAI faces competitive pressure from Anthropic and questions about cost sustainability."
+    },
+    {
+        "id": "https://www.theverge.com/cs/features/836456/influencers-tiktok-debt-shopaganda",
+        "title": "Stop, Shop, and Scroll",
+        "link": "https://www.theverge.com/cs/features/836456/influencers-tiktok-debt-shopaganda",
+        "published": "2025-12-08T07:00:01-05:00",
+        "source": "The Verge",
+        "summary": "In 1914 Joseph Pilates was sitting in a World War I-era internment camp watching his fellow inmates waste away when he had an idea. As he later recounted to a journalist, the skinny prison courtyard cats kept spry and limber, stretching and moving even as they starved \u2014 could the German citizens interned in the [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/jbl-grip/",
+        "title": "JBL Grip Review: A Bluetooth Speaker With Lava Lamp Vibes",
+        "link": "https://www.wired.com/review/jbl-grip/",
+        "published": "Mon, 08 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "This waterproof ultra-portable comes with a splash of party."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/trump-says-if-netflix-buys-warner-bros-its-market-share-could-be-a-problem-123004774.html?src=rss",
+        "title": "Trump says if Netflix buys Warner Bros. its market share 'could be a problem'",
+        "link": "https://www.engadget.com/entertainment/streaming/trump-says-if-netflix-buys-warner-bros-its-market-share-could-be-a-problem-123004774.html?src=rss",
+        "published": "Mon, 08 Dec 2025 12:00:04 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>After Netflix <a href=\"https://www.engadget.com/entertainment/netflix-to-buy-warner-bros-for-827-billion-120836295.html\">announced</a> that it was acquiring Warner Bros. Discovery last week, observers immediatley wondered when or if the deal could obtain regulatory approval. Now, President Trump has made comments indicating that said approval is likely to take awhile if it happens at all, <a href=\"https://www.bloomberg.com/news/articles/2025-12-07/trump-says-netflix-warner-bros-deal-will-need"
+    },
+    {
+        "id": "https://gizmodo.com/five-nights-at-freddys-2-has-a-big-post-thanksgiving-open-2000696569",
+        "title": "\u2018Five Nights at Freddy\u2019s 2\u2019 Has a Big Post-Thanksgiving Open",
+        "link": "https://gizmodo.com/five-nights-at-freddys-2-has-a-big-post-thanksgiving-open-2000696569",
+        "published": "Mon, 08 Dec 2025 12:00:28 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Five Nights At Freddy&#039;s 2 Blumhouse\" class=\"attachment-full size-full wp-post-image\" height=\"1281\" src=\"https://gizmodo.com/app/uploads/2025/11/Five-Nights-at-Freddys-2-Blumhouse.jpg\" width=\"1920\" /><br /><br />Blumhouse gets out another winner at the box office as the year winds down, while 'Zootopia 2' is just a short hop away from $1 billion."
+    },
+    {
+        "id": "https://mashable.com/article/the-streamer-awards-2025-winners-list-streamer-of-year",
+        "title": "The Streamer Awards 2025: IShowSpeed wins Streamer of the Year",
+        "link": "https://mashable.com/article/the-streamer-awards-2025-winners-list-streamer-of-year",
+        "published": "Mon, 08 Dec 2025 11:44:46 +0000",
+        "source": "Mashable",
+        "summary": "This year's Streamer Awards gave nods to IShowSpeed, Kai Cenat, CaseOh, Caedrel, Cinna, PlaqueBoyMax, Emiru, and more."
+    },
+    {
+        "id": "https://mashable.com/gifts/best-gifts-for-dad",
+        "title": "60+ Christmas gifts for Dad he wont have to pretend to like",
+        "link": "https://mashable.com/gifts/best-gifts-for-dad",
+        "published": "Mon, 08 Dec 2025 11:23:55 +0000",
+        "source": "Mashable",
+        "summary": "Find the best Christmas gifts for dads, from classic gifts he'll actually use to unique gift ideas you won't think of on your own."
+    },
+    {
+        "id": "https://mashable.com/article/tesla-holiday-update-2025-full-list",
+        "title": "Teslas 2025 holiday update brings Grok navigation, Santa Mode, and more",
+        "link": "https://mashable.com/article/tesla-holiday-update-2025-full-list",
+        "published": "Mon, 08 Dec 2025 11:22:52 +0000",
+        "source": "Mashable",
+        "summary": "Tesla has announced its 2025 holiday update, and it's a banger."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-apple-ipad-deal",
+        "title": "The Apple iPad 11-inch is back to $279 at Amazon \u2014 act fast to save $70",
+        "link": "https://mashable.com/article/dec-8-apple-ipad-deal",
+        "published": "Mon, 08 Dec 2025 11:13:28 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 8, the 11-inch iPad (A16 chip, 128GB, WiFi) is on sale for $279 at Amazon. This is 20% off its list price of $349."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-mega-evolution-phantasmal-flames-booster-box-deal",
+        "title": "The Pok\u00e9mon TCGs Mega Evolution and Phantasmal Flames Booster Box is cheaper at TCGplayer vs. Amazon",
+        "link": "https://mashable.com/article/dec-8-mega-evolution-phantasmal-flames-booster-box-deal",
+        "published": "Mon, 08 Dec 2025 11:00:03 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 8, Pok\u00e9mon TCG Mega Evolution and Phantasmal Flames Booster Boxes are available on TCGplayer at prices that undercut Amazon up to $23.71"
+    },
+    {
+        "id": "https://readwrite.com/finnish-floorball-suspicious-betting-probe-players-banned-match-fixing/",
+        "title": "Finnish floorball issues 80 competition bans after widespread betting scandal",
+        "link": "https://readwrite.com/finnish-floorball-suspicious-betting-probe-players-banned-match-fixing/",
+        "published": "Mon, 08 Dec 2025 11:26:17 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A detailed close-up photograph of a Finnish floorball stick and white perforated ball resting on a polished gymnasium floor.\" class=\"attachment-medium size-medium wp-post-image\" height=\"188\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ManhtpV-Q36bJX0GFTIDgg-300x188.webp\" style=\"width: 100%; height: 62.5%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A total of 80 fixed-term competition bans have been imposed on players and officials of Finnish floorball, with the length"
+    },
+    {
+        "id": "https://www.zdnet.com/article/the-best-products-zdnet-tested-in-2025/",
+        "title": "The 40 best products we tested in 2025: Editors' picks for phones, TVs, AI, and more",
+        "link": "https://www.zdnet.com/article/the-best-products-zdnet-tested-in-2025/",
+        "published": "Mon, 08 Dec 2025 12:00:38 GMT",
+        "source": "Latest news",
+        "summary": "After a year of testing the top hardware and software, here's ZDNET's list of 2025 winners."
+    },
+    {
+        "id": "https://www.zdnet.com/article/not-enough-people-are-talking-about-this-free-microsoft-office-alternative-with-minimal-ai/",
+        "title": "Not enough people are talking about this free Microsoft Office alternative with minimal AI",
+        "link": "https://www.zdnet.com/article/not-enough-people-are-talking-about-this-free-microsoft-office-alternative-with-minimal-ai/",
+        "published": "Mon, 08 Dec 2025 11:58:00 GMT",
+        "source": "Latest news",
+        "summary": "If you're eyeing a new office suite that is locally installed and fully featured, Collabora runs on Linux, MacOS, and Windows."
+    },
+    {
+        "id": "https://www.zdnet.com/article/im-a-vinyl-enthusiast-but-this-digital-streaming-app-made-me-enjoy-wireless-audio-just-as-much/",
+        "title": "I'm a vinyl enthusiast, but this digital streaming app made me enjoy wireless audio just as much",
+        "link": "https://www.zdnet.com/article/im-a-vinyl-enthusiast-but-this-digital-streaming-app-made-me-enjoy-wireless-audio-just-as-much/",
+        "published": "Mon, 08 Dec 2025 11:56:00 GMT",
+        "source": "Latest news",
+        "summary": "If you stream your music and want better audio than a Bluetooth speaker can offer, consider the WiiM Amp Ultra."
+    },
+    {
+        "id": "https://www.zdnet.com/article/i-replaced-chrome-with-a-local-ai-browser-on-my-pixel-and-its-almost-too-good-to-be-free/",
+        "title": "I replaced Chrome with a local AI browser on my Pixel and it's almost too good to be free",
+        "link": "https://www.zdnet.com/article/i-replaced-chrome-with-a-local-ai-browser-on-my-pixel-and-its-almost-too-good-to-be-free/",
+        "published": "Mon, 08 Dec 2025 11:53:00 GMT",
+        "source": "Latest news",
+        "summary": "Puma works on iPhone and Android, providing you with private, local AI directly in your mobile browser."
+    },
+    {
+        "id": "https://www.zdnet.com/article/stop-using-chatgpt-for-everything-ai-models-for-research-coding-images/",
+        "title": "Stop using ChatGPT for everything: The AI models I use for research, coding, and more (and which I avoid)",
+        "link": "https://www.zdnet.com/article/stop-using-chatgpt-for-everything-ai-models-for-research-coding-images/",
+        "published": "Mon, 08 Dec 2025 11:48:00 GMT",
+        "source": "Latest news",
+        "summary": "From GPT to Claude to Gemini, model names change fast, but use cases matter more. Here's how I choose the best model for the task at hand."
+    },
+    {
+        "id": "https://resurf.me",
+        "title": "Show HN: Web app that lets you send email time capsules",
+        "link": "https://resurf.me",
+        "published": "Mon, 08 Dec 2025 11:37:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46191124\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/08/1128969/2026-breakthroughs-list-leftovers/",
+        "title": "4 technologies that didn\u2019t make our 2026 breakthroughs list",
+        "link": "https://www.technologyreview.com/2025/12/08/1128969/2026-breakthroughs-list-leftovers/",
+        "published": "Mon, 08 Dec 2025 12:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "If you\u2019re a longtime reader, you probably know that our newsroom selects 10 breakthroughs every year that we think will define the future. This group exercise is mostly fun and always engrossing, but at times it can also be quite difficult.\u00a0 We collectively pitch dozens of ideas, and the editors meticulously review and debate the&#8230;"
     }
 ]
