📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1358,5 +1358,101 @@
         "published": "Mon, 08 Dec 2025 12:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "If you\u2019re a longtime reader, you probably know that our newsroom selects 10 breakthroughs every year that we think will define the future. This group exercise is mostly fun and always engrossing, but at times it can also be quite difficult.\u00a0 We collectively pitch dozens of ideas, and the editors meticulously review and debate the&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/hinges-new-ai-feature-helps-daters-start-better-convos-moving-beyond-boring-small-talk/",
+        "title": "Hinge\u2019s new AI feature helps daters move beyond boring small talk",
+        "link": "https://techcrunch.com/2025/12/08/hinges-new-ai-feature-helps-daters-start-better-convos-moving-beyond-boring-small-talk/",
+        "published": "Mon, 08 Dec 2025 13:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Hinge launched \u201cConvo Starters,\u201d a feature powered by AI that provides personalized tips for initiating meaningful conversations."
+    },
+    {
+        "id": "https://www.theverge.com/cs/features/810002/influencers-creator-economy-special-series",
+        "title": "How the creator economy destroyed the internet",
+        "link": "https://www.theverge.com/cs/features/810002/influencers-creator-economy-special-series",
+        "published": "2025-12-08T08:00:05-05:00",
+        "source": "The Verge",
+        "summary": "Jimmy Donaldson, better known as MrBeast, has the most popular YouTube account with over 450 million subscribers, or a little over 1 in 16 people in the world. His success with high-production, high-output stunt videos have made him the aspirational model for independent content creators everywhere: the actualization of the promise that, thanks to the [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/deals/apple-watch-series-11-drops-100-to-an-all-time-low-price-130006591.html?src=rss",
+        "title": "Apple Watch Series 11 drops $100 to an all-time low price",
+        "link": "https://www.engadget.com/deals/apple-watch-series-11-drops-100-to-an-all-time-low-price-130006591.html?src=rss",
+        "published": "Mon, 08 Dec 2025 13:00:06 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Sure, Black Friday and Cyber Monday have come and gone, but you can still find a last-minute deal on the <a href=\"https://www.engadget.com/computing/the-best-tech-gifts-and-cool-gadgets-for-2025-140052697.html\">best tech gifts</a>. Take the <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0FQFL8PZ5&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=ce953114-3275-46bd-9a3a-b5ee77775bd0&amp;featureI"
+    },
+    {
+        "id": "https://mashable.com/article/hinge-launches-ai-conversation-starters",
+        "title": "Hinge launches AI feature so you stop starting the conversation with hey",
+        "link": "https://mashable.com/article/hinge-launches-ai-conversation-starters",
+        "published": "Mon, 08 Dec 2025 13:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Dating app Hinge launches an AI feature to help craft a first message to a match."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-apple-macbook-pro-i5-2020",
+        "title": "Gift yourself this MacBook Pro for just $400",
+        "link": "https://mashable.com/article/dec-8-apple-macbook-pro-i5-2020",
+        "published": "Mon, 08 Dec 2025 12:20:49 +0000",
+        "source": "Mashable",
+        "summary": "A MacBook Pro can be yours for only $399.97 (reg. $1,580) now through Jan. 11."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-microsoft-windows-11-pro",
+        "title": "Give your PC a total refresh for just $10 with this Microsoft upgrade",
+        "link": "https://mashable.com/article/dec-8-microsoft-windows-11-pro",
+        "published": "Mon, 08 Dec 2025 12:19:06 +0000",
+        "source": "Mashable",
+        "summary": "Give your PC a total refresh with this lifetime license to Microsoft Windows 11 Pro for $9.97 (reg. $199)."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-playstation-5-pro-deal",
+        "title": "Amazons still offering the PlayStation 5 Pro for its best-ever price \u2014 act fast to save over $100",
+        "link": "https://mashable.com/article/dec-8-playstation-5-pro-deal",
+        "published": "Mon, 08 Dec 2025 12:08:47 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 8, the PlayStation 5 Pro is still on sale at its best price of $648.99 at Amazon. This is 13% off its list price of $749.99."
+    },
+    {
+        "id": "https://mashable.com/article/dec-4-magic-the-gathering-avatar-the-last-airbender-play-booster-box-deal",
+        "title": "The Magic: The Gathering Avatar The Last Airbender Play Booster Box has never been cheaper at Amazon \u2014 save over $60",
+        "link": "https://mashable.com/article/dec-4-magic-the-gathering-avatar-the-last-airbender-play-booster-box-deal",
+        "published": "Mon, 08 Dec 2025 11:52:40 +0000",
+        "source": "Mashable",
+        "summary": "The Magic: The Gathering Avatar The Last Airbender Play Booster Box is on sale for $142.57 on Amazon. That's the lowest-ever price."
+    },
+    {
+        "id": "https://readwrite.com/turkey-orders-arrest-soccer-players-officials-illegal-gambling-probe/",
+        "title": "Turkey orders arrest of top-tier soccer players, officials in gambling probe",
+        "link": "https://readwrite.com/turkey-orders-arrest-soccer-players-officials-illegal-gambling-probe/",
+        "published": "Mon, 08 Dec 2025 13:02:16 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"The ball prominently displays the Turkish flag. Turkey orders arrest of top-tier soccer players, officials in gambling probe\" class=\"attachment-medium size-medium wp-post-image\" height=\"188\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Be5uVfYrQOKKknqAIH-Zg-300x188.webp\" style=\"width: 100%; height: 62.5%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A total of 46 people in Turkey have been ordered to be detained, some including soccer players, club presidents, and&#8230;"
+    },
+    {
+        "id": "https://steerlabs.substack.com/p/confident-idiot-problem",
+        "title": "The \"confident idiot\" problem: Why AI needs hard rules, not vibe checks",
+        "link": "https://steerlabs.substack.com/p/confident-idiot-problem",
+        "published": "Thu, 04 Dec 2025 20:48:56 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46152838\">Comments</a>"
+    },
+    {
+        "id": "https://daringfireball.net/2025/12/bad_dye_job",
+        "title": "Bad Dye Job",
+        "link": "https://daringfireball.net/2025/12/bad_dye_job",
+        "published": "Mon, 08 Dec 2025 11:47:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46191194\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/medical-ai-in-the-uk-doctors-clinicians-surgeries-and-general-administrative-workloads/",
+        "title": "UK doctors\u2019 surgeries deploying AI in patient care",
+        "link": "https://www.artificialintelligence-news.com/news/medical-ai-in-the-uk-doctors-clinicians-surgeries-and-general-administrative-workloads/",
+        "published": "Mon, 08 Dec 2025 12:47:11 +0000",
+        "source": "AI News",
+        "summary": "<p>InTouchNow.ai is now offering doctors surgeries a piece of software designed to modernise phone answering, designed to reduce hold times and create a smoother, more responsive experience for patients and staff. In the UK, many GP (general practice) surgeries&#8217; phone lines are tied up in the mornings as patients try to contact their medical practitioner [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/medical-ai-in-the-uk-doctors-clinicians-surgeries-and"
     }
 ]
